# codegraph

./: .gitignore  AGENTS.md  BENCHMARK_SUMMARY.md  Cargo.toml  README.md  README_BENCHMARK.md  benchmark_data.csv  benchmark_report.md  generate_charts.py  linkedin_post_template.md  real_benchmark_data.csv  run_real_benchmark.py
src/: analyze.rs  cli.rs  embed.rs  graph.rs  lang.rs  main.rs  mcp.rs  parse.rs  store.rs  symbol.rs  ui.rs  ui_index.html  vector.rs  walk.rs  watch.rs
