[package]
name = "codegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
fastembed = "5.17.2"
ignore = "0.4.26"
lbug = "0.17.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
