[package]
name = "codegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
fastembed = "5.17.2"
hnsw_rs = "0.3.4"
ignore = "0.4.26"
lbug = "0.17.1"
notify = "8.2.0"
rayon = "1.12.0"
rmcp = { version = "1.8.0", features = [
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-std", "macros", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
